--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.0.10
   date_format: ^2.0.6
   hexcolor: ^2.0.7
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
